<resources>
    <string name="app_name">BaseCode</string>
    <string name="WordToCorrect">Word</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maison">Maison</string>
    <string name="famille">Famille</string>
    <string name="corpshumain">Corps humain</string>
    <string name="couleurs">Couleurs</string>
    <string name="animaux">Animaux</string>
    <string name="choixtheme">Choisis un thème à explorer :</string>
    <string name="correction">Ecris le mot ici</string>
    <string name="ignorer">Je passe</string>
    <string name="vrai">Vrai</string>
    <string name="faux">Faux</string>
    <string name="messageerreur1">Désolé, le mot était bien orthographié !</string>
    <string name="messageerreur2">Désolé, le mot est mal orthographié ou il manque peut-être la majuscule. Peux-tu le réécrire ci-dessous :</string>
    <string name="validation">Je valide</string>
</resources>
