<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtachesmot"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="fr.cesi.base.ui.orthographe.ChoixRubriqueFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/choixtheme"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:clickable="true"
            android:layout_width="wrap_content"

            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/default_margin_button"
            android:id="@+id/maison">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/etiquette" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/maison"
                android:paddingTop="5dp"
                android:textSize="@dimen/textsize"
                android:textColor="@color/colorTextButton"/>
        </FrameLayout>

        <FrameLayout
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/default_margin_button"
            android:id="@+id/famille">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/etiquette" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/famille"
                android:paddingTop="5dp"
                android:textSize="@dimen/textsize"
                android:textColor="@color/colorTextButton"/>
        </FrameLayout>

        <FrameLayout
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/default_margin_button"
            android:id="@+id/corpshumain">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/etiquette" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/corpshumain"
                android:paddingTop="5dp"
                android:textSize="@dimen/textsize"
                android:textColor="@color/colorTextButton"/>
        </FrameLayout>

        <FrameLayout
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/default_margin_button"
            android:id="@+id/couleurs">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/etiquette" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/couleurs"
                android:paddingTop="5dp"
                android:textSize="@dimen/textsize"
                android:textColor="@color/colorTextButton"/>
        </FrameLayout>

        <FrameLayout
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/default_margin_button"
            android:id="@+id/animaux">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/etiquette" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/animaux"
                android:paddingTop="5dp"
                android:textSize="@dimen/textsize"
                android:textColor="@color/colorTextButton"/>
        </FrameLayout>

    </LinearLayout>
</LinearLayout>
