<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtachesmot"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="fr.cesi.base.ui.orthographe.TestMotFragment">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/default_margin_button"
            android:background="@drawable/etiquette"
            android:textColor="@color/colorTextButton" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/default_margin_button"
            android:background="@drawable/etiquettelarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">


            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/ellipsevrai"
                android:text="@string/vrai"
                android:textColor="@color/colorTextButton"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/ellipsefaux"
                android:text="@string/faux"
                android:textColor="@color/colorTextButton"/>

        </LinearLayout>


        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/default_margin_button"
            android:background="@drawable/etiquette"
            android:text="@string/ignorer"
            android:textColor="@color/colorTextButton" />

    </LinearLayout>

</LinearLayout>
